[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Player/whip1-Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Music/Player/damage_5.wav" type="AudioStream" id=3]
[ext_resource path="res://Music/Player/damage_3.wav" type="AudioStream" id=4]
[ext_resource path="res://Music/Player/damage_1.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Mole/shotgun.png" type="Texture" id=6]
[ext_resource path="res://Music/Player/damage_2.wav" type="AudioStream" id=7]
[ext_resource path="res://Music/Player/damage_4.wav" type="AudioStream" id=8]
[ext_resource path="res://Music/Random/whip.wav" type="AudioStream" id=9]
[ext_resource path="res://Music/Shotgun/shoot.wav" type="AudioStream" id=10]
[ext_resource path="res://Music/Player/footsteps.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7 )

[sub_resource type="StreamTexture" id=8]
load_path = "res://.import/player_idle1.png-4ee64b5f0dd01e1a4e91fe891e27c0c4.stex"

[sub_resource type="StreamTexture" id=9]
load_path = "res://.import/player_idle2.png-0aa51c488912ad17001494b6abd0a0c2.stex"

[sub_resource type="StreamTexture" id=12]
load_path = "res://.import/player_walk_1.png-480b0eaf8c9685b09cc30ff6b1595e2a.stex"

[sub_resource type="StreamTexture" id=13]
load_path = "res://.import/player_walk_2.png-616e5f01006f85b276c72b095750e2a0.stex"

[sub_resource type="StreamTexture" id=16]
load_path = "res://.import/player_grab.png-4c5ee118cc46bc737f915d302bb06901.stex"

[sub_resource type="StreamTexture" id=15]
load_path = "res://.import/player_climb1.png-f136f0a6d5a8e6d929168b97cf3f06f3.stex"

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="StreamTexture" id=10]
load_path = "res://.import/player_knocked1.png-4c14f7452d9805218ca708d5313fa439.stex"

[sub_resource type="StreamTexture" id=11]
load_path = "res://.import/player_knocked2.png-a4457170676e2f144933c2a399fdd17f.stex"

[sub_resource type="StreamTexture" id=14]
load_path = "res://.import/player_climb2.png-a17dd8f18fafb75bf9190c7a32e2768e.stex"

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "hanging",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "climbing_stop",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "whiping",
"speed": 13.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "stunned",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "climbing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.96768, 5.36925 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6, 7 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 2, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -10 )
current = true
zoom = Vector2( 0.14, 0.14 )
limit_left = -32
limit_top = -32
limit_right = 672
limit_bottom = 544
smoothing_enabled = true
smoothing_speed = 7.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.00509, 0.993949 )
frames = SubResource( 3 )
animation = "stunned"
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="whip_node" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )
disabled = true

[node name="LedgeY" type="RayCast2D" parent="."]
position = Vector2( 7, -10 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 8
collide_with_areas = true

[node name="LedgeX" type="RayCast2D" parent="."]
position = Vector2( 6, -2 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 8
collide_with_areas = true

[node name="ladderCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -3 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 1 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="ladderCheck2" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 1 )
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 0, 8 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.00392157, 0.996078, 0.27451, 1 )
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="webDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="web" type="CollisionShape2D" parent="webDetect"]
shape = SubResource( 5 )

[node name="exitDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="exitDetect"]
shape = SubResource( 6 )

[node name="Boss" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8192
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="BuyIt" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 16384

[node name="Shotgun" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 6 )

[node name="Dam1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0

[node name="Dam2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0

[node name="Dam3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="Dam4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0

[node name="Dam5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0

[node name="Whip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -12.0

[node name="Walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -22.0

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="webDetect" to="." method="_on_webDetect_area_entered"]
[connection signal="area_exited" from="webDetect" to="." method="_on_webDetect_area_exited"]
[connection signal="body_entered" from="exitDetect" to="." method="_on_exitDetect_body_entered"]
[connection signal="body_exited" from="exitDetect" to="." method="_on_exitDetect_body_exited"]
[connection signal="area_entered" from="Boss" to="." method="_on_Boss_area_entered"]
